# THEIA-UI-Computer-Use

./: .gitignore  MANIFEST.json  MANIFEST.md  README.md  __init__.py  after-install.md  plugin.yaml  pyproject.toml  requirements-basic.txt  requirements-locate.txt  windows_computer_use.py  windows_computer_use_locate_worker.py
docs/: PLUGIN_DESIGN.md
scripts/: doctor.py  install_basic.ps1  install_locate_worker.ps1  install_skill.py  setup_locate_worker.py
skills/theia-ui-computer-use/: SKILL.md
skills/theia-ui-computer-use/references/: agent-operating-loop.md  gestures-drag-scroll.md  starter-workflows.md  text-keyboard-shortcuts.md  troubleshooting.md  verification-and-safety.md
skills/windows-computer-use/: SKILL.md
skills/windows-computer-use/references/: blender-ui-object-add.md  browser-handoff-x-search.md  discord-search-workflow.md  fresh-install-checklist.md  game-bar-disable-workflow.md  infographic-generation.md  locateanything-loading.md  locateanything-worker-setup.md  microsoft-paint-drawing.md  microsoft-store-search-workflow.md  photopea-facebook-cover-workflow.md  photos-image-filter-workflow.md  shotcut-audio-filters.md  shotcut-audio-track.md  shotcut-export-ffmpeg-fallback.md  shotcut-media-import.md  targeted-screenshot-capture.md  targeting-and-clicking.md  tool-registration-fix.md  verified-region-capture.md
tests/: test_plugin_registration.py
